--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.804ca42e42.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.bb33ad211c.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -73,7 +73,9 @@
             <div class="column is-1">&nbsp;</div>
 
             <div class="ms-quickstart__creators column is-5">
-              <h3 class="ms-quickstart__heading">I am a Creator:</h3>
+              <h3 class="ms-quickstart__heading">
+                I am a Publisher or Creator:
+              </h3>
               <a href="exchange.html?view=registry"
                 class="button is-primary is-green is-medium is-emphasized">
                 Register to Begin
@@ -348,5 +350,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: 6ee73c5be793f502ee11967721fc89b82650178b
+git sha: 8a5140c0be126926fd8f51b3d3d367caed8011b3
  -->
