update static pages: homepage, faq

--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,7 @@
           ▾ How much do time slot tokens cost?
         </a>
         <a href="#custom-token" class="is-block ms-external-link">
-          ▾ Can I get paid in a custom token?
+          ▾ Can I pay (and get paid) in a custom token?
         </a>
         <a href="#what-happens-when" class="is-block ms-external-link">
           ▾ What happens when I place a bid?
@@ -67,11 +67,11 @@
         <a href="#what-are-fees" class="is-block ms-external-link">
           ▾ What are the fees?
         </a>
-        <a href="#do-i-have-to-auction-my-token" class="is-block ms-external-link">
-          ▾ Do I have to auction my time slot token?
-        </a>
         <a href="#what-is-gas" class="is-block ms-external-link">
           ▾ What is "gas" and "gasPrice"?
+        </a>
+        <a href="#do-i-have-to-auction-my-token" class="is-block ms-external-link">
+          ▾ Do I have to auction my time slot token?
         </a>
         <a href="#refunds" class="is-block ms-external-link">
           ▾ How do I get a refund?
@@ -107,16 +107,16 @@
       <h3 class="title is-5 is-size-6-mobile ms-title__q">
         How does this work?
       </h3>
-      <p><em>
-        Microsponsors is essentially a bulletin board that helps Publishers and Creators sell sponsored content as time slots.
-      </em></p>
       <p>
-        Microsponsors "MSPT" tokens represent time slots in websites, newsletters and podcasts that Sponsors can buy. Creators can easily create ("mint") and auction these time slot tokens on the public Ethereum blockchain using the tools provided by this website. These tokens are compatible with the ERC-721 token standard (also known as "Non-Fungible Tokens")</a>.
+        <em>
+        Microsponsors is essentially a bulletin board that helps Creators &amp; Publishers sell time slots to advertisers. This model works well for niche content because Sponsors can reach the exact audience they are looking for, in the right context.</em></p>
+      <p>
+        Microsponsors "MSPT" tokens represent time slots for sale in websites, newsletters and podcasts that Sponsors can buy. Creators can easily create ("mint") and auction these time slot tokens on the public Ethereum blockchain using the tools provided by this website. MSPT time slot tokens are compatible with the ERC-721 token standard (also known as "Non-Fungible Tokens")</a>.
       </p>
       <p>
         All of the data for Account Registration, the MSPT time slots and their transfer restrictions live on the public Ethereum blockchain and are free and open to all to explore and build upon.
       </p>
-      <p>Check out our short <a href="https://www.youtube.com/watch?v=I0vQAFoWmDY" target="_blank">"How it works"</a> video on YouTube (< 2 minutes).</p>
+      <p>Check out our 2-minute <a href="https://www.youtube.com/watch?v=I0vQAFoWmDY" target="_blank">"How it works"</a> video on YouTube.</p>
 
       <a href="#top" class="is-block ms-external-link is-size-6 is-size-6-mobile" style="margin-left: 20px;">↑ TOP</a>
 
@@ -124,9 +124,9 @@
       <h3 class="title is-5 is-size-6-mobile ms-title__q">
         What do I need to start?
       </h3>
-      <p>You only need a <a href="https://metamask.io" target="_blank">Metamask</a> wallet to browse around and get registered (we will support more wallets later).</a>
-      <p>If you want to create and auction time slots, you will need a small amount of Ether (ETH) in your wallet.</p>
-      <p>If you are a Sponsor (Buyer) of time slots, you will need bidding assets in your wallet: DAI or USDC stablecoins, each of which represent $1 USD.</p>
+      <p>You only need a <a href="https://metamask.io" target="_blank">Metamask</a> wallet to browse around, bid on time slots and get registered (we will support more wallets later).</a>
+      <p><em>Creators/Publishers:</em> If you want to create and auction time slots, you need a small amount of Ether (ETH) in your wallet.</p>
+      <p><em>Sponsors/Buyers:</em> You only need bidding assets in your wallet: $DAI or $USDC stablecoins, each of which represent $1 US Dollar on the public Ethereum blockchain.</p>
 
       <a href="#top" class="is-block ms-external-link is-size-6 is-size-6-mobile" style="margin-left: 20px;">↑ TOP</a>
 
@@ -134,12 +134,12 @@
       <h3 class="title is-5 is-size-6-mobile ms-title__q">
         How do I register?
       </h3>
-      <p>Registration is easy and free. It is required for anyone wishing to create MSPT time slot tokens. If you don't already have it, install the <a href="https://metamask.io" target="_blank">Metamask</a> wallet for Ethereum. Then you can <a href="exchange.html?view=registry">visit our Registry</a> and you will be prompted to associate your Ethereum account with at least one type of content, such as a social media account or website.
+      <p>Registration is easy and free. It is required for any Creator or Publisher that wants to create &amp; auction MSPT time slot tokens. If you don't already have it, install the <a href="https://metamask.io" target="_blank">Metamask</a> wallet for Ethereum. Then you can <a href="exchange.html?view=registry">visit our Registry</a> and you will be prompted to associate your Ethereum account with at least one type of content, such as a social media account or website.
       </p>
-      <p>You may associate as many pieces of content with your Ethereum account as you like. We recommend using a separate Ethereum account for your Microsponsors activity (all Registry data is public). We will add more content types over time. Let us know what you want to use!
+      <p>You may associate as many pieces of content with your Ethereum account as you like. We recommend using a separate Ethereum account for your Microsponsors activity (all Registry data is public).
       </p>
       <p>
-      Follow the instructions to verify your content and then you will be able to create and auction MSPT tokens.
+      Follow the instructions in the Registry to verify your content and then you will be able to create and auction MSPT tokens.
       </p>
 
       <a href="#top" class="is-block ms-external-link is-size-6 is-size-6-mobile" style="margin-left: 20px;">↑ TOP</a>
@@ -148,10 +148,12 @@
       <h3 class="title is-5 is-size-6-mobile ms-title__q">
         Why do I need to register?
       </h3>
-      <p>If you intend to Create (aka "Mint") and auction MSPT time slot tokens, you first need to register your account. If you only intend to buy other people's time slots, you don't necessarily need to register, but it will probably help sellers trust you more.</p>
+      <p><em>Creators/Publishers:</em> If you intend to Create (aka "Mint") and auction MSPT time slot tokens, you first need to register your account by verifying that you control the content you are selling time slots for.
+      <p>
+      <em>Sponsors/Buyers:</em>
+      If you only intend to buy other people's time slots, you don't necessarily need to register, but it will probably help sellers trust you more.</p>
       <p>Over time, we'll be adding more tools to help you enhance your reputation and get more out of your registered account.</p>
-      <p>Microsponsors reserves the right to refuse registration for any reason at any time. If a user is removed from the Microsponsors Registry, any tokens they created become frozen and unable to trade.
-      </p>
+
 
       <a href="#top" class="is-block ms-external-link is-size-6 is-size-6-mobile" style="margin-left: 20px;">↑ TOP</a>
 
@@ -159,7 +161,7 @@
       <h3 class="title is-5 is-size-6-mobile ms-title__q">
         What is a time slot token?
       </h3>
-      <p>Microsponsors enables you to create tokens on the Ethereum blockchain that represent a time slot. An "MSPT" token is tied to a piece of validated content claimed by a user with an Ethereum account in our Registry. Validated content can be a web domain, a url, an email address or a social media account. Each token you create automatically goes to auction on this website.
+      <p>Microsponsors enables you to create tokens on the Ethereum blockchain that represent a time slot. These "MSPT" tokens are each tied to a piece of verified content. Verified content can be a web domain, a url, an email address or a social media account. Each token you create automatically goes to auction on this website.
       <p>
       An MSPT token is an "ERC-721" or "Non-Fungible Token" (NFT) that consists of the following on-chain data fields:
       </p>
@@ -184,7 +186,7 @@
       <h3 class="title is-5 is-size-6-mobile ms-title__q">
         How much do time slot tokens cost?
       </h3>
-      <p>Each Microsponsors MSPT token is unique and has its own value which will be determined by the open market based on a variety of factors, including the reputation of the Seller.
+      <p>Each Microsponsors MSPT time slot token is unique and has its own value which will be determined by the open market based on a variety of factors, including the reputation of the Seller.
       </p>
       <p>When bidding on MSPTs, it is important to consider the past history of the Seller in evaluating whether they are a trustworthy counterparty. Each individual MSPT has a "Comments" section which you can use to ask questions of the Seller, both before and after the auction. You can also look through comments on the Seller's past token sales as well.
       </p>
@@ -193,9 +195,14 @@
 
       <a name="custom-token"></a>
       <h3 class="title is-5 is-size-6-mobile ms-title__q">
-        Can I get paid in a custom token?
+        Can I pay (and get paid) in a custom token?
       </h3>
-      <p>Yes. The default bidding &amp; payment options are stablecoins like USDC and DAI that represent $1 USD, but you can also signal to your bidders that you would like to be paid in a custom token. There is a <a href="https://www.youtube.com/watch?v=tQeh5nsEYUw" target="_blank">1-minute tutorial on YouTube</a> to show you how.</p>
+      <p>Yes. The default bidding &amp; payment options are stablecoins like $USDC and $DAI that represent $1 US Dollar on the Ethereum blockchain. Some communities and individuals may prefer to be paid in custom tokens (also known as "social money", "community tokens" or "personal tokens").
+      </p>
+      <p>
+      If you are a seller and would like to let bidders know you want to be paid in a custom token,
+      we have a <a href="https://www.youtube.com/watch?v=tQeh5nsEYUw" target="_blank">1-minute tutorial on YouTube</a> to show you how to set it up. The only requirement is that your custom token be <a href="https://www.youtube.com/watch?v=cqZhNzZoMh8" target="_blank">ERC-20</a> compatible.
+      </p>
 
       <a name="what-happens-when"></a>
       <h3 class="title is-5 is-size-6-mobile ms-title__q">
@@ -219,21 +226,12 @@
       <h3 class="title is-5 is-size-6-mobile ms-title__q">
         What are the fees?
       </h3>
-      <p><em class="is-highlight">Registration</em> is free (we pay the "gas"). "Gas" is the term for transaction fees on the Ethereum network that are paid in ETH. Gas prices fluctuate but can be <a href="https://ethgasstation.info/" target="_blank">estimated with this tool</a>which we use to calculate them for you.</p>
+      <p><em class="is-highlight">Registration</em> is free (we pay the "gas"). "Gas" is the term for transaction fees on the Ethereum network that are paid in ETH. Gas prices fluctuate but can be <a href="https://ethgasstation.info/" target="_blank">estimated with this
+      tool</a> which we use to calculate them for you.</p>
       <p><em class="is-highlight">Minting.</em> Creating an MSPT time slot has a low fee currently set at 0.0001 ETH, in addition to the Ethereum network "gas" fee.</p>
       <p><em class="is-highlight">Bidding</em> is free and happens off-chain (you just need to sign your bid via Metamask). There is no Ethereum gas fee for bids.</p>
       <p><em class="is-highlight">Cancelling bids</em> happens on-chain and you only need to pay the Ethereum gas fee for each cancel. Bids have an expiration date and time, they do not need to be canceled after they expire.</p>
       <p><em class="is-highlight">Auction Sales.</em> When the token Creator selects a winning bid, there is a 1.5% fee to each side of the trade. The Creator also pays the Ethereum "gas" plus a small 0x Protocol transaction fee when they accept a winning bid. The 0x Protocol fee is roughly the same as the Ethereum gas fee.</p>
-
-      <a href="#top" class="is-block ms-external-link is-size-6 is-size-6-mobile" style="margin-left: 20px;">↑ TOP</a>
-
-      <a name="do-i-have-to-auction-my-token"></a>
-      <h3 class="title is-5 is-size-6-mobile ms-title__q">
-        Do I have to auction my time slot token?
-      </h3>
-      <p>
-      No. Many users may only wish to mint time slots and use them elsewhere in a different way. Because they are ERC-721 standard tokens, you can simply mint a token and use the standard functions (for example: transfer) to interact with other users or smart contracts in the ecosystem.
-      </p>
 
       <a href="#top" class="is-block ms-external-link is-size-6 is-size-6-mobile" style="margin-left: 20px;">↑ TOP</a>
 
@@ -245,6 +243,15 @@
       <p>When you use Microsponsors with MetaMask, you can use the controls inside of MetaMask to adjust the gas price. One exception is when a Seller clicks "Select Bid" to end an auction. There is a warning in the confirmation modal for this action: you cannot adjust the gas price in MetaMask or the transaction will fail. Instead, click on the "Advanced" controls inside of the confirmation modal if you wish to adjust the gas price.</p>
       <p>For all other transaction types, you may adjust the gas price directly in MetaMask.</p>
 
+      <a href="#top" class="is-block ms-external-link is-size-6 is-size-6-mobile" style="margin-left: 20px;">↑ TOP</a>
+
+      <a name="do-i-have-to-auction-my-token"></a>
+      <h3 class="title is-5 is-size-6-mobile ms-title__q">
+        Do I have to auction my time slot token?
+      </h3>
+      <p>
+      No. Many users may only wish to mint time slots and use them elsewhere and/or in a different way. Because they are ERC-721 standard tokens, you can simply mint a token and use the standard functions (for example: transfer) to interact with other users or smart contracts in the ecosystem.
+      </p>
       <a href="#top" class="is-block ms-external-link is-size-6 is-size-6-mobile" style="margin-left: 20px;">↑ TOP</a>
 
       <a name="refunds"></a>
@@ -271,7 +278,7 @@
       <h3 class="title is-5 is-size-6-mobile ms-title__q">
         How can I earn money with the 0x Protocol (ZRX)?
       </h3>
-      <p>Microsponsors is built on top of the <a href="https://0x.org" target="_blank">0x Protocol's</a> off-chain auction bidding and on-chain atomic swaps. Users are charged a small 0x Protocol transaction fee (denominated in ETH) when they buy or sell a Microsponsors token thru our UI. The 0x Protocol incentivizes users to "stake" ZRX tokens and rewards them in ETH collected from these protocol fees. The more ZRX you stake, the more the protocol rewards you will collect.
+      <p>Microsponsors is built on top of the <a href="https://0x.org" target="_blank">0x Protocol's</a> off-chain auction bidding and on-chain atomic swaps. Users are charged a small 0x Protocol transaction fee (denominated in ETH) when they buy or sell a Microsponsors token thru this website. The 0x Protocol incentivizes users to "stake" ZRX tokens and rewards them in ETH collected from these protocol fees. The more ZRX you stake, the more the protocol rewards you will collect.
       </p>
       <p>If you plan to do alot of token purchases through Microsponsors, you have the option to form a ZRX staking pool in order to maximize your 0x protocol reward. To begin, you can also just join an existing staking pool. The more ZRX in your staking pool, the larger your protocol reward.</p>
       <p>The best place to start for now is on the <a href="https://0x.org/zrx/staking" target="_blank">ZRX staking dashboard</a> available here.</p>
@@ -406,9 +413,8 @@
     </footer>
 
   </body>
-  <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
 git branch: master
-git sha: 8a5140c0be126926fd8f51b3d3d367caed8011b3
+git sha: 39310f1598095ea4ede9a7c81e952a38b60ce514
  -->
