--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <div class="ms-quickstart__creators column is-5">
               <h3 class="ms-quickstart__heading">
-                I am a Publisher or Creator:
+                I am a Creator or Publisher:
               </h3>
               <a href="exchange.html?view=registry"
                 class="button is-primary is-green is-medium is-emphasized">
@@ -132,7 +132,7 @@
             Creators + Sponsors/Media Buyers transact directly, wallet-to-wallet on the public Ethereum blockchain.
           </h4>
           <h4 class="title is-5 is-size-6-mobile">
-            Bidding is decentralized. Nobody can interfere in auctions.
+            Bidding and exchange is decentralized. Nobody can interfere in auctions.
           </h4>
 
       </div> <!-- /.container -->
@@ -140,7 +140,7 @@
       <div class="homepage-details__howthisworks">
         <div class="ms-full is-centered">
           <p class="heading">
-            <span class="is-block">Watch our 2 minute video:</span>
+            <span class="is-block">2-minute video:</span>
             <a href="https://www.youtube.com/watch?v=I0vQAFoWmDY" target="_blank" class="is-size-5 is-size-6-mobile">
               How Microsponsors Works
             </a>
@@ -159,18 +159,17 @@
           <ul>
             <li class="is-size-6 is-size-6-mobile">Creators + Publishers: no fee for registration.</li>
             <li class="is-size-6 is-size-6-mobile">Sponsors + Media Buyers: no fee for bidding.</li>
-            <li class="is-size-6 is-size-6-mobile">When a bid is selected by the seller, Microsponsors charges a fee of 1.5% to each side.</li>
-            <li class="is-size-6 is-size-6-mobile">Using Ethereum means lower fees. Especially for cross-border payments.</li>
+            <li class="is-size-6 is-size-6-mobile">When a winning bid is selected by the seller, Microsponsors charges a fee of 1.5% to each side of the sale.</li>
           </ul>
         </div>
 
         <div class="homepage-details__detail">
           <div class="detail-icon detail-icon__instant"></div>
-          <h3 class="title is-4 is-size-5-mobile">Instant Payouts</h3>
+          <h3 class="title is-4 is-size-5-mobile">Instant, Flexible Payouts</h3>
           <ul>
             <li class="is-size-6 is-size-6-mobile">Instant transaction settlement. No waiting around!</li>
-           <li class="is-size-6 is-size-6-mobile">Participants can cash-out their earnings any time.</li>
-            <li class="is-size-6 is-size-6-mobile">Our Referral program will help you earn even more by bringing your friends along (start date TBD).</li>
+           <li class="is-size-6 is-size-6-mobile">Cash-out your earnings any time.</li>
+            <li class="is-size-6 is-size-6-mobile">Get paid in US-dollar stablecoins like $USDC or $DAI, or any other custom ERC-20 compatible token you like (such as a community or personal token).</li>
           </ul>
         </div>
 
@@ -346,9 +345,8 @@
     <script type="text/javascript" src="static/js/jquery-3.3.1.min.js"></script>
 
   </body>
-  <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
 git branch: master
-git sha: 8a5140c0be126926fd8f51b3d3d367caed8011b3
+git sha: 39310f1598095ea4ede9a7c81e952a38b60ce514
  -->
