--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: FAQ">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.bb33ad211c.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.0debe4ee05.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -413,8 +413,9 @@
     </footer>
 
   </body>
+  <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
 git branch: master
-git sha: 39310f1598095ea4ede9a7c81e952a38b60ce514
+git sha: 81daca34215c46f86dac7604c613a8ff2492465d
  -->
