--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.0debe4ee05.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.baae9e2965.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -21,6 +21,10 @@
 
       <div class="navbar-menu ms-navbar-menu">
         <div class="navbar-end">
+          <span class="navbar-item is-size-7 no-link">
+            <img src="static/img/icons-0x-eth.svg" />
+            Powered by Ethereum NFTs + 0x.org
+          </span>
           <a href="faq.html" class="navbar-item is-size-6">
             FAQ
           </a>
@@ -65,7 +69,7 @@
               </a>
               <div class="ms-quickstart__links is-5 is-size-7-mobile">
                 Bidding is FREE and does not require registration!
-                Check it out &rarr;
+                Check it out.
               </div>
             </div>
 
@@ -119,7 +123,6 @@
             Our time slots represent <span>scheduled contextual ads</span> in websites, newsletters, podcasts and videos.
           </h4>
 
-
       </div> <!-- /.container -->
 
       <div class="container ms-padding-top ms-shifted-right">
@@ -134,6 +137,34 @@
           <h4 class="title is-5 is-size-6-mobile">
             Bidding and exchange is decentralized. Nobody can interfere in auctions.
           </h4>
+
+      </div> <!-- /.container -->
+
+      <div class="container ms-extra-padding-top ms-shifted-left">
+
+          <h3 class="title is-3 is-size-4-mobile">
+            Self-serve: get started now.
+          </h3>
+          <h4 class="title is-5 is-size-6-mobile">
+            Ready to dive in? Click one of the buttons below.
+            Visit the <a href="faq.html">FAQ</a> for more info.
+          </h4>
+          <p class="heading">
+            Sponsors:
+          </p>
+          <a href="exchange.html"
+            class="button is-primary is-medium is-blue is-emphasized">
+            Browse time slots
+            &nbsp;<i class="fas fa-chevron-right"></i>
+          </a>
+          <p class="heading ms-margin-top">
+            Creators + Publishers:
+          </p>
+          <a href="exchange.html?view=registry"
+            class="button is-primary is-green is-medium is-emphasized">
+            Register to begin
+            &nbsp;<i class="fas fa-chevron-right"></i>
+          </a>
 
       </div> <!-- /.container -->
 
@@ -167,7 +198,7 @@
           <div class="detail-icon detail-icon__instant"></div>
           <h3 class="title is-4 is-size-5-mobile">Instant, Flexible Payouts</h3>
           <ul>
-            <li class="is-size-6 is-size-6-mobile">Instant transaction settlement. No waiting around!</li>
+            <li class="is-size-6 is-size-6-mobile">Instant transaction settlement on Ethereum. No waiting around!</li>
            <li class="is-size-6 is-size-6-mobile">Cash-out your earnings any time.</li>
             <li class="is-size-6 is-size-6-mobile">Get paid in US-dollar stablecoins like $USDC or $DAI, or any other custom ERC-20 compatible token you like (such as a community or personal token).</li>
           </ul>
@@ -195,7 +226,8 @@
           <div class="detail-icon detail-icon__tamper"></div>
           <h3 class="title is-4 is-size-5-mobile">Tamper-Proof</h3>
           <ul>
-            <li class="is-size-6 is-size-6-mobile">Publishers + Creators are digitally verified with a tamper-proof blockchain Registry.</li>
+            <li class="is-size-6 is-size-6-mobile">Our time slots are unique NFTs minted &amp; traded on the public Ethereum blockchain.</li>
+            <li class="is-size-6 is-size-6-mobile">The Publishers + Creators who mint them are digitally verified with a tamper-proof blockchain Registry.</li>
             <li class="is-size-6 is-size-6-mobile">Auction bids are secured with cryptographic signature tools.</li>
           </ul>
         </div>
@@ -349,5 +381,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: 160b6e5714815b32ee5a14c4529b1ccbc45978d9
+git sha: aa1390810bdc3db4f1483039dcb03816ff02f188
  -->
