--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <ul>
             <li class="is-size-6 is-size-6-mobile">Creators + Publishers: no fee for registration.</li>
             <li class="is-size-6 is-size-6-mobile">Sponsors + Media Buyers: no fee for bidding.</li>
-            <li class="is-size-6 is-size-6-mobile">When a winning bid is selected by the seller, Microsponsors charges a fee of 1.5% to each side of the sale.</li>
+            <li class="is-size-6 is-size-6-mobile">When a bid is selected by the seller, Microsponsors subtracts a fee of 2.5% from the winning bid amount.</li>
           </ul>
         </div>
 
@@ -381,5 +381,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: f9a254cba10a08d24cdf9ccb4b1d947c4cac84b1
+git sha: 4dc63c37acb56ff3b65f97d918ec38f5dc7144d1
  -->
