--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.baae9e2965.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.64200d77d8.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -56,6 +56,18 @@
 
         <div class="container ms-quickstart">
 
+          <div class="temp-pause">
+            <i class="fas fa-pause-circle"></i>
+            <p>
+              Ethereum gas fees are too hi at the moment! <br />
+              Project is pausing until low cost transactions are available.
+              Still under construction -- email
+              <a href="mailto:hello@microsponsors.io">hello@microsponsors.io</a>
+              for newsletter updates!
+            </p>
+          </div>
+
+          <!--
           <div class="columns">
 
             <div class="ms-quickstart__sponsors column is-5">
@@ -94,7 +106,9 @@
               </div>
             </div>
 
-          </div> <!-- /.columns -->
+          </div>
+          -->
+
         </div> <!-- /.container -->
 
         <div class="container ms-container--howthisworks">
@@ -381,5 +395,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: 4dc63c37acb56ff3b65f97d918ec38f5dc7144d1
+git sha: 854ffb70c0d883f5a87c70dd4d73ea1641db1363
  -->
