homepage: comment out 2nd set of CTA buttons

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 
       </div> <!-- /.container -->
 
+<!--
       <div class="container ms-extra-padding-top ms-shifted-left">
 
           <h3 class="title is-3 is-size-4-mobile">
@@ -180,7 +181,7 @@
             &nbsp;<i class="fas fa-chevron-right"></i>
           </a>
 
-      </div> <!-- /.container -->
+      </div> -->  <!-- /.container -->
 
       <div class="homepage-details__howthisworks">
         <div class="ms-full is-centered">
