update homepage copy

--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
 
       <div class="navbar-menu ms-navbar-menu">
         <div class="navbar-end">
-          <span class="navbar-item is-size-7 no-link">
-            <img src="static/img/icons-0x-eth.svg" />
-            Powered by Ethereum NFTs + 0x.org
-          </span>
           <a href="faq.html" class="navbar-item is-size-6">
             FAQ
           </a>
@@ -128,15 +124,14 @@
 
           <div class="detail-icon detail-icon__niche"></div>
           <h3 class="title is-3 is-size-4-mobile">
-            Reach niche audiences with sponsored content.
+            Reach niche audiences.
           </h3>
           <h4 class="title is-5 is-size-6-mobile">
-            Perfect for reaching savvy, niche audiences who care about privacy and don't want to be tracked.
+            Our time slots represent scheduled contextual ads in websites, newsletters, games, podcasts and videos.
           </h4>
           <h4 class="title is-5 is-size-6-mobile">
-            Our time slots represent <span>scheduled contextual ads</span> in websites, newsletters, podcasts and videos.
+            Perfect for reaching savvy, niche audiences.
           </h4>
-
       </div> <!-- /.container -->
 
       <div class="container ms-padding-top ms-shifted-right">
@@ -146,10 +141,10 @@
             Peer-to-peer marketplace.
           </h3>
           <h4 class="title is-5 is-size-6-mobile">
-            Creators + Sponsors/Media Buyers transact directly, wallet-to-wallet on the public Ethereum blockchain.
+            Creators + Sponsors transact directly, wallet-to-wallet on a public blockchain.
           </h4>
           <h4 class="title is-5 is-size-6-mobile">
-            Bidding and exchange is decentralized. Nobody can interfere in auctions.
+            Creators keep what Sponsors spend. Fewer middlemen means more revenue for the Creator.
           </h4>
 
       </div> <!-- /.container -->
@@ -241,7 +236,7 @@
           <div class="detail-icon detail-icon__tamper"></div>
           <h3 class="title is-4 is-size-5-mobile">Tamper-Proof</h3>
           <ul>
-            <li class="is-size-6 is-size-6-mobile">Our time slots are unique NFTs minted &amp; traded on the public Ethereum blockchain.</li>
+            <li class="is-size-6 is-size-6-mobile">Our time slots are unique NFTs minted &amp; traded on a public blockchain.</li>
             <li class="is-size-6 is-size-6-mobile">The Publishers + Creators who mint them are digitally verified with a tamper-proof blockchain Registry.</li>
             <li class="is-size-6 is-size-6-mobile">Auction bids are secured with cryptographic signature tools.</li>
           </ul>
